--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
 
   app: # Service PHP-FPM
@@ -66,6 +64,16 @@ services:
       - "${PGADMIN_PORT:-80}:80"
     networks:
       - app-network
+
+  nodejs:
+    image: node:18
+    container_name: larasocle_node
+    working_dir: /var/www/html
+    volumes:
+      - ./src:/var/www/html
+    networks:
+      - larasocle_network
+    command: ["tail", "-f", "/dev/null"]
 
   redis:
     image: redis:alpine
